--- a/advanced.html
+++ b/advanced.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Simple Integration</title>
+    <title>Advanced Integration</title>
   </head>
 
   <body>
-    <h1 style="text-align: center"><b>Simple Integration</b></h1>
+    <h1 style="text-align: center"><b>Advanced Integration</b></h1>
     <h4 style="text-align: center">by Miya Margalith</h4>
     <div style="width: 500px; height: 500px">
       <script src="https://static.vidazoo.com/basev/vptm.js"></script>
